fix: layout and key event on ios

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -5,5 +5,4 @@
   width: 100%;
   color: #ffffff;
   background-color: #202020;
-  position: absolute;
 }
