--- a/src/app/shared/components/searcher/searcher.component.scss
+++ b/src/app/shared/components/searcher/searcher.component.scss
@@ -1,8 +1,8 @@
 .searcher-container {
-  width: 100%;
   border-bottom: 1px solid #adadad;
   display: flex;
   justify-content: center;
+  padding: 0px 20px 0px 20px;
 }
 
 .search-form {
